Fixes white space on members page for small screens

--- a/app/_scss/pages/members.scss
+++ b/app/_scss/pages/members.scss
@@ -125,7 +125,11 @@
 
 			figure {
 				width: 70%;
-				margin: 2.5em auto 3em auto;
+				margin: 0 auto 2.8em auto;
+			}
+
+			h2, p {
+				white-space: normal;
 			}
 
 			h2 {
